--- a/tlsn/Cargo.toml
+++ b/tlsn/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "tlsn-server-fixture",
     "tests-integration",
     "examples",
-    "benches", "tlsn-wasm",
+    "benches", "tlsn-wasm", "ws-proxy",
 ]
 resolver = "2"
 
