--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -16,28 +16,34 @@ fixtures = ["dep:hex"]
 tlsn-tls-core = { workspace = true, features = ["serde"] }
 tlsn-utils = { workspace = true }
 
-mpz-circuits = { workspace = true }
 mpz-core = { workspace = true }
 mpz-garble-core = { workspace = true }
+mpz-circuits = { workspace = true }
 
-bimap = { version = "0.6.3", features = ["serde"] }
+bimap = { version = "0.6", features = ["serde"] }
+blake3 = { workspace = true }
 bytes = { workspace = true, features = ["serde"] }
 hex = { workspace = true, optional = true }
 opaque-debug = { workspace = true }
 p256 = { workspace = true, features = ["serde"] }
+rand = { workspace = true }
 rs_merkle = { workspace = true }
 rstest = { workspace = true, optional = true }
 serde = { workspace = true }
+sha2 = { workspace = true }
 thiserror = { workspace = true }
+tiny-keccak = { version = "2.0", features = ["keccak"] }
 web-time = { workspace = true }
 webpki-roots = { workspace = true }
+zeroize = { workspace = true }
 
 [dev-dependencies]
-bincode = { workspace = true }
-hex = { workspace = true }
-rand_chacha = { workspace = true }
-rand_core = { workspace = true }
 rstest = { workspace = true }
+hex = { workspace = true }
+rand_core = { workspace = true }
+rand_chacha = { workspace = true }
+bincode = { workspace = true }
+tlsn-data-fixtures = { workspace = true }
 
 [[test]]
 name = "api"
