--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,7 +111,7 @@ rand_chacha = { version = "0.3" }
 rand_core = { version = "0.6" }
 regex = { version = "1.10" }
 ring = { version = "0.17" }
-rs_merkle = { version = "1.4" }
+rs_merkle = { git = "https://github.com/tlsnotary/rs-merkle.git", rev = "b07210c" }
 rstest = { version = "0.17" }
 rustls = { version = "0.21" }
 rustls-pemfile = { version = "1.0" }
