--- a/crates/notary/server/Cargo.toml
+++ b/crates/notary/server/Cargo.toml
@@ -3,6 +3,9 @@ name = "notary-server"
 version = "0.1.0-alpha.6"
 edition = "2021"
 
+[features]
+attestation = [ "dep:sgx_quote" ]
+
 [dependencies]
 tlsn-verifier = { workspace = true }
 
@@ -17,6 +20,7 @@ csv = { version = "1.3" }
 eyre = { version = "0.6" }
 futures = { workspace = true }
 futures-util = { workspace = true }
+hex = { workspace = true }
 http = { workspace = true }
 http-body-util = { workspace = true }
 hyper = { workspace = true, features = ["client", "http1", "server"] }
@@ -30,6 +34,7 @@ rustls-pemfile = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde_yaml = { version = "0.9" }
+sgx_quote = { git = "https://github.com/Cosmian/tee-tools", tag = "1.3.0", optional = true }
 sha1 = { version = "0.10" }
 structopt = { version = "0.3" }
 thiserror = { workspace = true }
