--- a/crates/benches/Cargo.toml
+++ b/crates/benches/Cargo.toml
@@ -13,6 +13,7 @@ serde = { workspace = true }
 tlsn-core = { workspace = true }
 tlsn-prover = { workspace = true }
 tlsn-server-fixture = { workspace = true }
+tlsn-server-fixture-certs = { workspace = true }
 tlsn-tls-core = { workspace = true }
 tlsn-verifier = { workspace = true }
 tokio = { workspace = true, features = [
