--- a/crates/wasm/Cargo.toml
+++ b/crates/wasm/Cargo.toml
@@ -21,6 +21,7 @@ no-bundler = ["wasm-bindgen-rayon/no-bundler"]
 [dependencies]
 tlsn-core = { path = "../core" }
 tlsn-prover = { path = "../prover" }
+tlsn-server-fixture-certs = { workspace = true }
 tlsn-tls-client-async = { path = "../tls/client-async" }
 tlsn-tls-core = { path = "../tls/core" }
 tlsn-verifier = { path = "../verifier" }
