--- a/crates/components/aead/Cargo.toml
+++ b/crates/components/aead/Cargo.toml
@@ -20,12 +20,10 @@ tlsn-block-cipher = { workspace = true }
 tlsn-stream-cipher = { workspace = true }
 tlsn-universal-hash = { workspace = true }
 
-mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac", optional = true, features = [
-    "ideal",
-] }
+mpz-common.workspace = true
+mpz-core.workspace = true
+mpz-garble.workspace = true
+mpz-ot = { workspace = true, optional = true, features = ["ideal"] }
 
 serio = { workspace = true }
 
