--- a/crates/components/universal-hash/Cargo.toml
+++ b/crates/components/universal-hash/Cargo.toml
@@ -15,13 +15,13 @@ ideal = ["dep:ghash_rc"]
 
 [dependencies]
 # tlsn
-mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac", features = [
+mpz-core.workspace = true
+mpz-common = { workspace = true, features = [
     "ideal",
 ] }
-mpz-fields = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-share-conversion-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
-mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
+mpz-fields.workspace = true
+mpz-share-conversion-core.workspace = true
+mpz-share-conversion.workspace = true
 
 ghash_rc = { package = "ghash", version = "0.5", optional = true }
 
@@ -34,10 +34,10 @@ tracing = { workspace = true }
 derive_builder = { workspace = true }
 
 [dev-dependencies]
-mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac", features = [
+mpz-common = { workspace = true, features = [
     "test-utils",
 ] }
-mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac", features = [
+mpz-share-conversion = { workspace = true, features = [
     "ideal",
 ] }
 
