--- a/crates/components/aead/Cargo.toml
+++ b/crates/components/aead/Cargo.toml
@@ -37,3 +37,4 @@ tracing = { workspace = true }
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
 aes-gcm = { workspace = true }
+tracing-subscriber.workspace = true
