--- a/crates/components/aead/Cargo.toml
+++ b/crates/components/aead/Cargo.toml
@@ -38,3 +38,4 @@ tracing = { workspace = true }
 tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
 aes-gcm = { workspace = true }
 tracing-subscriber.workspace = true
+rand.workspace = true
