--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ resolver = "2"
 
 [profile.tests-integration]
 inherits = "release"
+split-debuginfo = "off"
 opt-level = 1
 
 [workspace.dependencies]
