--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,15 +132,15 @@ webpki-roots = { version = "0.26" }
 ws_stream_tungstenite = { version = "0.13" }
 
 [patch."https://github.com/privacy-scaling-explorations/mpz"]
-mpz-circuits = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-common = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-core = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-garble = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-ole = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-ot = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-share-conversion-core = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
-mpz-fields = { git = "https://github.com/privacy-scaling-explorations//mpz", branch = "aead-failing-tests" }
+mpz-circuits = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-common = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-core = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-garble = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-ole = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-ot = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-share-conversion-core = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
+mpz-fields = { git = "https://github.com/privacy-scaling-explorations//mpz", rev = "1daa19b" }
 
 
